# parallel-pipeline

./: .gitignore  CMakeLists.txt  LICENSE  README.md  assignment.md  assignment.txt
data/: example.mapping  generate_data.sh  generate_pipeline.cpp
eval/: dynamic_parallel_timing.cpp  naive_timing.cpp  parallel_timing.cpp  plots.py  static_parallel_timing.cpp  tbb_timing.cpp  timing.cpp
eval/plots_and_timings/: dynamic_parallel_timing.txt  naive_timing.txt  static_parallel_timing.txt  tbb_timing.txt
implementation/: buffer.hpp  config_parsing.cpp  naive_pipeline.cpp  parallel_pipeline.cpp  pipeline.hpp  tbb_pipeline.cpp  thread_pool.hpp
tests/: test.cpp  test1.pipeline  test2.pipeline
